--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
   <h3>Red-tailed Hawk</h3> 
   <div class="bird-section">
       <img src="images/red.jpg" alt="Bird 1">
-      <p>The red-tailed hawk is a common sight in North American forests, soaring high above the trees on broad wings.</p>
+      <p>The red-tailed hawk is a common sight in North American forests, soaring high above the trees on broad wings. Did you know that Red-tailed Hawks have sharp eyesight that's eight times better than a human's. In flight, they can spy a mouse on the ground from 100 feet in the air. To keep their eyes clean, birds have a third eyelid called a nictitating membrane.</p>
     </div>
   </section>
 <section>
   <h3>Pileated Woodpecker</h3> 
   <div class="bird-section">
       <img src="images/wood.jpg" alt="Bird 1">
-      <p>This large, striking woodpecker can be heard hammering away at trees in search of insects.</p>
+      <p>This large, striking woodpecker can be heard hammering away at trees in search of insects. Did you know that The Pileated Woodpecker is also called the wood hen or the carpenter bird.</p>
     </div>
   </section>
 <section>
    <h3>Great Blue Heron</h3>
    <div class="bird-section">
       <img src="images/blue.jpg" alt="Bird 3">
-      <p>The great blue heron is a majestic wading bird found in wetlands and along rivers and lakes.</p>
+      <p>The great blue heron is a majestic wading bird found in wetlands and along rivers and lakes.Did you know that The Great Blue Herons have specialized feathers on their chest that continually grow and fray. The herons comb this “powder down” with a fringed claw on their middle toes, using the down like a washcloth to remove fish slime and other oils from their feathers as they preen.</p>
     </div>
   </section>
   </main>
