--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>Elephants</h2>
       <div class="animal-box">
         <img src="images/elephants.jpg" alt="Elephant">
-        <p>Elephants are the largest land animals in the world. They are known for their incredible intelligence and complex social structures. Elephants are the largest land animals in the world. They can weigh up to 22,000 pounds!
+        <p>Elephants are the largest land animals in the world. They are known for their incredible intelligence and complex social structures. They can weigh up to 22,000 pounds!
         Did you know that elephants use infrasonic communication to communicate with each other over long distances?</p>
       </div>
     </section>
